--- a/configs/config_HeLa_256.json
+++ b/configs/config_HeLa_256.json
@@ -1,7 +1,7 @@
 {   
     "name": "HeLa_256_256",
-    "resume_path": "./models/control_sd15_cell.ckpt",
-    "ckpt_save_path": "/export/data/msturm/HeLa_256_256",
-    "gpu_train": 5,
-    "gpu_samp": 6
+    "resume_path": "/export/data/msturm/HeLa_256_256/last.ckpt",
+    "ckpt_save_path": "/export/data/msturm/HeLa_256_256_new",
+    "gpu_train": 6,
+    "gpu_samp": 7
 }
